--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20230722/pngtree-digital-wallet-on-mobile-app-3d-illustration-of-money-management-and-image_3779458.jpg');
+            background-image: url('https://raw.githubusercontent.com/Tasicolee/edpay/main/img/qrcode.png');
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -54,21 +54,18 @@
             transform: scale(1.05);
             box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.2); /* Increased box shadow on hover for more depth */
         }
-
     </style>
 </head>
 <body>
 <div class="container">
     <h1>ED钱包</h1>
 
-    <img src="https://raw.githubusercontent.com/Tasicolee/edpay/main/img/exported_qrcode_image_600.png"/>
+    <img src="https://raw.githubusercontent.com/Tasicolee/edpay/main/img/qrcode.png"/>
 
     <a href="https://raw.githubusercontent.com/Tasicolee/edpay/main/apk/edpay.apk" download>
-        安卓下载
-        ✍</a>
+        安卓下载</a>
     <a href="https://raw.githubusercontent.com/Tasicolee/edpay/main/apk/edpay.apk" download>
-        苹果下载
-        ✍</a>
+        苹果下载</a>
 
 </div>
 </body>
