--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://raw.githubusercontent.com/Tasicolee/edpay/main/img/bg.jpg');
+            background-image: url('https://raw.githubusercontent.com/Tasicolee/edpay/main/img/bg.webp');
             background-size: cover;
             display: flex;
             justify-content: center;
