--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             transform: scale(1.05);
             box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.2); /* Increased box shadow on hover for more depth */
         }
+
     </style>
 </head>
 <body>
@@ -64,9 +65,8 @@
 
     <a href="https://raw.githubusercontent.com/Tasicolee/edpay/main/apk/edpay.apk" download>
         安卓下载</a>
-    <a href="https://raw.githubusercontent.com/Tasicolee/edpay/main/apk/edpay.apk" download>
+    <a href="https://testflight.apple.com/join/cg6rZiFa" download>
         苹果下载</a>
-
 </div>
 </body>
 </html>
